--- a/info/info.css
+++ b/info/info.css
@@ -42,6 +42,29 @@
         margin-left: 200px;
         width: 300px;
     }
+    #ubication {
+        display: none;
+        margin-left: 260px;
+        width: 300px !important;
+    }
+    
+    #clima {
+        display: none;
+        margin-left: 260px;
+        width: 300px !important;
+    }
+    
+    #fiesta1 {
+        display: none;
+        margin-left: 260px;
+        width: 300px !important;
+    }
+    
+    #fiesta2 {
+        display: none;
+        margin-left: 260px;
+        width: 300px !important;
+    }
 }
 
 .infoContainer {
@@ -54,7 +77,6 @@
     justify-content: center;
     height: 40px;
     margin-bottom: 20px;
-    margin-left: 25%;
     width: 400px;
 }
 
@@ -100,18 +122,22 @@ p a {
 
 #ubication {
     display: none;
+    width: 700px;
 }
 
 #clima {
     display: none;
+    width: 700px;
 }
 
 #fiesta1 {
     display: none;
+    width: 700px;
 }
 
 #fiesta2 {
     display: none;
+    width: 700px;
 }
 
 button {
@@ -120,4 +146,8 @@ button {
     font-size: 20px;
     margin-left: 10px;
     margin-right: 10px;
+}
+
+.infoButtons {
+    cursor: pointer;
 }
